# CredGem

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  redoc.html
.github/workflows/: lint_server.yml  test_server.yml
SDK/: README.md  pyproject.toml
SDK/credgem/: __init__.py  client.py  contexts.py  exceptions.py  models.py
SDK/credgem/api/: base.py  credit_types.py  insights.py  transactions.py  wallets.py
SDK/docs/: getting_started.md
SDK/examples/: advanced_usage.py  basic_usage.py  draw_credits_example.py  draw_credits_scenarios.py
SDK/tests/: test_draw_credits.py  test_transactions.py  test_wallets.py
admin-panel/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin-panel/src/: App.tsx  Providers.tsx  index.css  main.tsx  routes.tsx
admin-panel/src/api/: axiosInstance.ts  creditTypeApi.ts  insightsApi.ts  productApi.ts  transactionApi.ts  walletApi.ts
admin-panel/src/components/: Header.tsx  Icons.tsx  KeyValuePairsInput.tsx  Layout.tsx  Sidebar.tsx  ThemeSwitch.tsx  ToastProvider.tsx  app-sidebar.tsx  background-varients.ts  breadcrums-dynamic.tsx  env-switcher.tsx  nav-main.tsx
admin-panel/src/components/playground/: check-wallet-balance.tsx  create-credit-type.tsx  create-wallet.tsx  debit-credits.tsx  deposit-credits.tsx  vertical-step.tsx
admin-panel/src/lib/: constants.ts  utils.ts
admin-panel/src/pages/: CreditSettings.tsx  Home.tsx  Transactions.tsx  Users.tsx  WalletDetails.tsx  Wallets.tsx  dashboard.tsx
admin-panel/src/store/: useInsightsStore.ts  useProductStore.ts  useTransactionStore.ts  useWalletStore.ts
admin-panel/src/types/: api.ts  creditType.ts  product.ts  wallet.ts
envs/: developement.env  prod.env
scripts/: load_seed.sh
server/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 627695abb072_products.py  add_tenant_user_columns.py  init_schema.py
server/scripts/: lint.sh  load_seed_data.py  seed_data.py  start.sh
server/src/: __main__.py
server/src/core/: app.py  db_config.py  error_handlers.py  lifespan.py  logging_config.py  redis_config.py  settings.py
server/src/db/: balances.py  credit_types.py  insights.py  products.py  transactions.py  wallets.py
server/src/models/: Insights.py  __init__.py  balances.py  base.py  credit_types.py  products.py  transactions.py  wallets.py
server/src/routes/: __init__.py  credit_types.py  insights.py  products.py  transactions.py  wallets.py
server/src/services/: credit_types_service.py  insights_service.py  products_service.py  transactions_service.py  wallets_service.py
server/src/utils/: __init__.py  auth.py  constants.py  ctx_managers.py  dependencies.py  singleton.py  transactions.py
server/src/utils/dependencies/: transactions.py
server/src/utils/middlewares/: __init__.py  idempotency.py
server/tests/: conftest.py  utils.py
server/tests/api/: test_credit_types.py  test_insights.py  test_products.py  test_subscriptions.py  test_transactions.py  test_wallets.py
(+35 files in other folders)
