[tool.poetry]
name = "credgem"
version = "0.1.0"
description = ""
authors = ["manor lahagani <manor21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

