[tool.poetry]
name = "credgem-sdk"
version = "0.1.0"
description = "Python SDK for CredGem API"
authors = ["CredGem"]
readme = "README.md"
packages = [{include = "credgem"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.25.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto" 